organizando estructura proyecto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,7 @@
 Error.login.message=Usuario o contraseña incorrectos
+Error.empty= Rellene este campo
+Error.signup.identifier.duplicate=El identificador ya existe en nuestra base de datos
+Error.signup.identifier.length=El identificador tiene que tener entre 5 y 24 caracteres.
+Error.signup.name.length=El nombre tiene que tener entre 2 y 24 caracteres.
+Error.signup.password.length=La contrasena tiene que tener entre 5 y 24 caracteres.
+Error.signup.passwordConfirm.coincidence=Las contrasenas no coinciden.
